Transaction Results modal class fix. Product information fixed button to display out of stock when product is out of stock.

--- a/GildedRose.Web/Views/Shared/TransactionResultModal.cshtml
+++ b/GildedRose.Web/Views/Shared/TransactionResultModal.cshtml
@@ -46,10 +46,10 @@
         }
         else
         {
-            <div clas="modal-header">
+            <div class="modal-header">
                 Purchase Failure
             </div>
-            <div clas="modal-body">
+            <div class="modal-body">
                 <p>Your transaction could not be completed.</p>
                 @if (Model.EntityResults != null)
                 {
@@ -97,7 +97,7 @@
                     </div>
                 }
             </div>
-            <div clas="modal-footer text-right">
+            <div class="modal-footer text-right">
                 <button class="btn rounded-0" data-dismiss="modal">Close</button>
             </div>
         }
