--- a/GildedRose.Web/Views/Home/ProductInformation.cshtml
+++ b/GildedRose.Web/Views/Home/ProductInformation.cshtml
@@ -95,6 +95,8 @@
         <div class="mt-5">
             @if (User.Identity.IsAuthenticated)
             {
+                @if(Model.StockCount > 0)
+                {
                 <button class="btn btn-success rounded-0 text-center w-100" data-toggle="modal" data-target="#purchase-modal" id="purchase-button">Purchase</button>
                 <div id="purchase-modal" class="modal fade">
                     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -147,6 +149,10 @@
 
 
                 </script>
+                } else
+                {
+                    <button class="btn btn-secondary rounded-0 text-center w-100" disabled>Out Of Stock</button>
+                }
             }
             else //we force unathenticated users to log in.
             {
@@ -175,6 +181,9 @@
     </div>
 </template>
 
+<template id="out-of-stock">
+    <button class="btn btn-secondary rounded-0 text-center w-100" disabled>Out Of Stock</button>
+</template>
 
 <script>
     function updateStock(stockCount) {
@@ -183,11 +192,15 @@
         container.removeClass();
         if (stockCount == 0) {
             container.addClass("text-danger");
+            $("#purchase-button").replaceWith($("#out-of-stock").html())
+
+
         } else if (stockCount > 0 && stockCount <= 5) {
             container.addClass("text-warning");
         } else {
             container.addClass("text-success");
         }
         $("#stock-count").html(stockCount);
+
     }
 </script>
