Ensured Carousel is working.

--- a/GildedRose.Web/Views/Home/ProductInformation.cshtml
+++ b/GildedRose.Web/Views/Home/ProductInformation.cshtml
@@ -192,7 +192,7 @@
         container.removeClass();
         if (stockCount == 0) {
             container.addClass("text-danger");
-            $("#purchase-button").replaceWith($("#out-of-stock").html())
+            $("#purchase-button").replaceWith($("#out-of-stock").html());
 
 
         } else if (stockCount > 0 && stockCount <= 5) {
