--- a/GildedRose.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/GildedRose.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="row d-flex flex-row flex-grow-1 align-items-center mt-5 mb-5">
-    <div class="col-sm-6 col-12 offset-sm-3">
+    <div class="col-xl-6 col-12 offset-xl-3">
         <div class="card rounded-0 shadow" style="border-bottom: 4px solid #dcc970; border-top:4px solid #dcc970;">
             <div class="card-body text-center">
 
